# qzxing_05fdc3

src/: CMakeLists.txt
src/zxing/win32/: CMakeLists.txt
src/zxing/zxing/: CMakeLists.txt
